# my_code

./: README.md  main.py
Langchain/Deep_Agent/: main.py
Langchain/langchain_middleware/: Pipeline_as_middleware.py
Langchain/langgraph/: interrupt_mechainsm.py  main.py
Langchain/langgraph/langgraph_tutorial/: 01_basic_graph.py  02_conditional_edges.py  03_loops.py  04_checkpointer.py  05_human_in_the_loop.py  06_tools.py  07_subgraphs.py  08_prebuilt.py  09_real_llm_agent.py  README.md
Low_Latency_Content_Delivery/: actors.md  demo_lp_showcase.py  pyrightconfig.json  train_T200_highload.py  train_T50.py  train_full.py  train_minimal.py  train_mixed_agents.py  train_telecom_env.py  train_telecom_env_verbose.py
Low_Latency_Content_Delivery/buffers/: __init__.py  mixed_rollout_buffer.py  rollout_buffer.py
Low_Latency_Content_Delivery/checkpoints/T50/: model.pt
Low_Latency_Content_Delivery/checkpoints/smoke_check/: best_model.pt  ckpt_iter1_20260304_212751.pt
Low_Latency_Content_Delivery/environments/: __init__.py  channel_model.py  telecom_env.py
Low_Latency_Content_Delivery/logs/smoke_check/: smoke_check_summary.json
Low_Latency_Content_Delivery/logs/train/: train_summary.json
Low_Latency_Content_Delivery/models/: __init__.py  actor.py  critic.py  environments.py  gat.py
Low_Latency_Content_Delivery/trainers/: __init__.py  mixed_ppo_trainer.py  ppo_trainer.py
Low_Latency_Content_Delivery/utils/: __init__.py  logger.py  slot_evaluator.py
PPO_Map/: main.py
Project/MCP_System/: README.md  STARTUP.md  check_tools.py  mcp_system.db  mcp_system.md  quick_test.py  startup.py  test_nl_tool_direct.py  test_nl_tool_http.py
Project/MCP_System/backend/: .env  .env.example  __init__.py  config.py  main.py  pyproject.toml  test_nl_tool.py
Project/MCP_System/backend/adapters/: __init__.py
Project/MCP_System/backend/adapters/cache/: __init__.py  redis_client.py
Project/MCP_System/backend/adapters/database/: __init__.py  connection.py  models.py
Project/MCP_System/backend/adapters/messaging/: __init__.py  kafka_producer.py
Project/MCP_System/backend/adapters/storage/: __init__.py  local.py
Project/MCP_System/backend/core/: __init__.py  exceptions.py  logging.py
Project/MCP_System/backend/gateway/: __init__.py  auth.py  authorization.py  middleware.py  rate_limit.py  sanitization.py
Project/MCP_System/backend/orchestration/: __init__.py  aggregator.py  context_manager.py  discovery.py  router.py  schema_mapper.py
Project/MCP_System/backend/protocol/: __init__.py  handlers.py  json_rpc.py  lifecycle.py
Project/MCP_System/backend/protocol/transports/: __init__.py  http_sse.py  stdio.py
Project/MCP_System/backend/requirements/: base.txt  dev.txt  prod.txt
Project/MCP_System/backend/services/: __init__.py
Project/MCP_System/backend/services/prompts/: __init__.py  prompt_manager.py  templates.py
Project/MCP_System/backend/services/resources/: __init__.py  manager.py
Project/MCP_System/backend/services/tools/: __init__.py  db_tools.py  executor.py  init_tools.py  nl_database_tool.py  registry.py
Project/MCP_System/backend/utils/: __init__.py
Project/MCP_System/deployment/: docker-compose.yml  grafana-datasources.yml  init-db.sql  prometheus.yml
Project/MCP_System/deployment/docker/: Dockerfile
Project/MCP_System/docs/: mcp_system_guide.md  nl_database_tool.md  prompt_management.md
Project/kafka/: Producer.py  README.md  admin_tools.py  arc.md  config.py  consumer_advanced.py  docker-compose.yml  producer_advanced.py  requirements.txt  stream_processing.py
Project/websocket/: .gitignore  Makefile  README-FASTAPI.md  README.md  docker-compose.yml  start.sh
Project/websocket/client/: index.html
Project/websocket/client/css/: style.css
Project/websocket/client/js/: app-fastapi.js  app.js
Project/websocket/server/: .env.example  config.js  package.json
Project/websocket/server-fastapi/: .env.example  .gitignore  Dockerfile  api.py  auth.py  config.py  create_test_data.py  database.py  init_db.py  main.py  redis_client.py  requirements.txt  schemas.py  websocket_handlers.py  websocket_manager.py
Project/websocket/server/src/: index.js  websocket.js
Project/websocket/server/src/handlers/: MessageHandler.js
Project/websocket/server/src/managers/: RoomManager.js  UserManager.js
Project/websocket/server/src/utils/: RateLimiter.js
ai_recruitment_backend/: .env  nodes.py  requirements.txt  schemas.py
authorization/: bearer.py
prefect_code/: main.py
rag/: ingestion.py
skills/: kafka.md
talent-acquisition-ai/: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
talent-acquisition-ai/app/: main.py
talent-acquisition-ai/app/core/: config.py  database.py  logger.py
talent-acquisition-ai/app/models/: database.py  schemas.py
talent-acquisition-ai/app/services/: feedback_optimization_service.py  jd_generation_service.py  llm_service.py  onboarding_service.py  rag_service.py  resume_formatter_service.py  resume_screening_service.py  rpa_communication_service.py
talent-acquisition-ai/app/workflows/: recruitment_graph.py
talent-acquisition-ai/database/migrations/: init.py
talent-acquisition-ai/scripts/: start_dev.sh
talent-acquisition-ai/tests/: conftest.py
