[tool.poetry]
name = "talent-acquisition-ai"
version = "1.0.0"
description = "Production-grade AI-powered talent acquisition system using LangGraph and Qwen"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
qwen-agent = "^0.1.0"
dashscope = "^1.20.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
celery = "^5.4.0"
httpx = "^0.28.0"
aiofiles = "^24.1.0"
python-multipart = "^0.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dateutil = "^2.9.0"
pytz = "^2024.2"
openpyxl = "^3.1.5"
pandas = "^2.2.0"
numpy = "^2.1.0"
scikit-learn = "^1.5.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
pillow = "^11.0.0"
pytesseract = "^0.3.13"
opencv-python = "^4.10.0"
websockets = "^14.1"
loguru = "^0.7.2"
tenacity = "^9.0.0"
pydantic[email] = "^2.9.0"
validators = "^0.22.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
prometheus-client = "^0.21.0"
streamlit = "^1.40.0"
plotly = "^5.24.0"
python-dotenv = "^1.0.1"
selenium = "^4.27.0"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.12.0"
aiohttp = "^3.11.0"
playwright = "^1.48.0"
pyee = "^12.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
httpx = "^0.28.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"
supervisor = "^4.2.5"
nginx-config = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
